--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1 id="title">Almadi Lounge</h1>
-    <h2>Good Views, Good Vibes</h2>
+    <h1 id="title">Sky Lounge</h1>
+    <h2>Good Views, Great Atmosphere</h2>
     <ul>
       <li><a href="#">Reservations</a></li>
       <li><a href="#">Dinner Menu</a></li>
