--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <head>
   <link href="style.css"  rel="stylesheet"/>
-  <script src="/assets/jquery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="script.js"></script> 
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet">
 </head>
