--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </header>
-  <div class="container-fluid">
+  <div class="container">
       <h1 id="heading">Today's Specials</h1>
     <div class="steak show-description">
     <p>Sirlion Steak With Vegetables<span class="price">$35</span><br />
