--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="style.css"  rel="stylesheet"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="script.js"></script> 
@@ -17,6 +18,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </header>
+  <div class = "container-fluid"
       <h1 id="heading">Today's Specials</h1>
     <div class="steak show-description">
     <p>Sirlion Steak With Vegetables<span class="price">$35</span><br />
@@ -33,4 +35,5 @@
     </p>
   </div>
   </div>   
+</div>
 </body>
